Updated <menuitem> serialization (HTML revision 5e49a20874fabef620bf7ea0be7534c73fbd58c4)

--- a/lib/Web/XML/Serializer.pod
+++ b/lib/Web/XML/Serializer.pod
@@ -89,7 +89,7 @@ DOM Parsing and Serialization Standard
 
 L<Web::HTML::Serializer>.
 
-L<Web::DOM::RootNode>.
+L<Web::DOM::ParentNode>.
 
 Namespace fixup <http://suika.fam.cx/www/markup/xml/nsfixup>.
 
