Replace perl-charclass by new definition extracted from chars.suikawiki.org, which in turns derived from manakai/data-chars; This updates XML version of XPath syntax from XML 1.0 4e to XML 1.0 5e (It's unclear whether this is what browsers do or not)

--- a/lib/Web/XPath/Parser.pod
+++ b/lib/Web/XPath/Parser.pod
@@ -94,16 +94,10 @@ L<Web::XPath::Evaluator>.
 
 =item XPATH1
 
-XML Path Language (XPath) Version 1.0 <http://www.w3.org/TR/xpath/>.
+XML Path Language (XPath) Version 1.0 <https://www.w3.org/TR/xpath/>.
 
 XML Path Language (XPath) Version 1.0 Specification Errata
-<http://www.w3.org/1999/11/REC-xpath-19991116-errata/>.
-
-The C<NCName> production rule in the Namespaces in XML 1.0 (Second
-Edition) <http://www.w3.org/TR/2006/REC-xml-names-20060816/#NT-NCName>
-MUST be used to parse the XPath expression.  (In other word, changes
-made by XML 1.1 or XML 1.0 Fifth Edition are not incorporated and even
-for an HTML document the same definition of C<NCName> is applied.)
+<https://www.w3.org/1999/11/REC-xpath-19991116-errata/>.
 
 If the tokenizer can't tokenize the entire input string, it MUST throw
 an syntax error and abort the parsing process.
@@ -139,7 +133,7 @@ Wakaba <wakaba@suikawiki.org>.
 
 =head1 LICENSE
 
-Copyright 2013 Wakaba <wakaba@suikawiki.org>.
+Copyright 2013-2016 Wakaba <wakaba@suikawiki.org>.
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself.
